Update to Java 11 and JavaFX 11. Update other libraries too